# hafnium-verification

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .gn  AUTHORS  BUILD.gn  Hafnium-CONTRIBUTING.md  Hafnium-README.md  Makefile  README.md  pg  pgmac  rust-toolchain  test.cpp
driver/: BUILD.gn
experiments/ownership-inference/hafnium/: .clang-tidy  .gn  BUILD.gn  CONTRIBUTING.md  Makefile  README.md  navbar.md
experiments/ownership-inference/hafnium/docs/: Architecture.md  CodeStructure.md  FVP.md  GettingStarted.md  HermeticBuild.md  Manifest.md  PreparingLinux.md  README.md  SchedulerExpectations.md  StyleGuide.md  Testing.md  VmInterface.md
experiments/ownership-inference/hafnium/driver/linux/: .gitignore  BUILD.gn  Makefile  main.c
experiments/ownership-inference/hafnium/inc/hf/: addr.h  api.h  boot_flow.h  boot_params.h  check.h  cpio.h  cpu.h  dlog.h  fdt.h  fdt_handler.h  load.h  manifest.h  memiter.h  mm.h  mpool.h  offset_size_header.h  panic.h  spci_internal.h  spinlock.h  string.h  vcpu.h  vm.h
experiments/ownership-inference/hafnium/kokoro/: build.sh  test.sh
experiments/ownership-inference/hafnium/kokoro/public/: continuous.cfg  presubmit.cfg
experiments/ownership-inference/hafnium/kokoro/ubuntu/: continuous.cfg  presubmit.cfg
experiments/ownership-inference/hafnium/project/reference/: AUTHORS  BUILD.gn
experiments/ownership-inference/hafnium/src/: BUILD.gn  abort.c  api.c  cpio.c  cpu.c  dlog.c  fdt.c  fdt_handler.c  fdt_handler_test.cc  fdt_test.cc  init.c  layout.c  layout_fake.c  load.c  main.c  manifest.c  manifest_test.cc  memiter.c  mm.c  mm_test.cc  mm_test.hh  mpool.c  mpool_test.cc  panic.c  spci_architected_message.c  std.c  string.c  string_test.cc  vcpu.c  vm.c  vm_test.cc
experiments/ownership-inference/hafnium/src/boot_flow/: BUILD.gn  android.c  common.c  linux.c
experiments/ownership-inference/hafnium/src/iommu/: BUILD.gn  absent.c
experiments/ownership-inference/hafnium/test/arch/: BUILD.gn  dlog_test.c  mm_test.c
experiments/ownership-inference/hafnium/test/hftest/: BUILD.gn  common.c  hftest.py  hftest_common.h  linux_main.c  mm.c  power_mgmt.c  service.c  standalone_main.c
experiments/ownership-inference/hafnium/test/linux/: BUILD.gn  hftest_socket.c  linux.c  manifest.dts
experiments/ownership-inference/hafnium/vmlib/: BUILD.gn  spci.c
hfo2/: Cargo.toml  README.md  aarch64-hfo2-test.json
hfo2/src/: abi.rs  abort.rs  addr.rs  api.rs  arith.rs  boot_flow.rs  boot_params.rs  cpio.rs  cpu.rs  dclist.rs  dlog.rs  fdt.rs  fdt_handler.rs  hypervisor.rs  init.rs  layout.rs  lib.rs  list.rs  load.rs  manifest.rs  memiter.rs  mm.rs  mpool.rs  page.rs  panic.rs  plat.rs  singleton.rs  slist.rs  spci.rs  spci_architected_message.rs  spinlock.rs  std.rs  types.rs  utils.rs  vm.rs
hfo2/src/arch/: aarch64.rs  fake.rs  mod.rs
src/: BUILD.gn  abi_test.cc  abort.c  alloc.c  api.c  api_test.cc  cpio.c  cpu.c  dlog.c  fdt.c  fdt_handler.c  fdt_handler_test.cc  fdt_test.cc  irq.c  layout.c  layout_fake.c  load.c  main.c  memiter.c  mm.c  mm_test.cc  mpool.c  mpool_test.cc  panic.c  plat.c  rules.mk  spci_architected_message.c  spci_test.cc  std.c  vm.c  vm.c.tmp
src/arch/aarch64/: BUILD.gn  args.gni  barriers.c  cpu.c  cpu_entry.S  entry.S  exception_macros.S  exceptions.S  gicv3.c  handler.c  hikey.mk  hypervisor_entry.S  io.h  mm.c  msr.h  offsets.c  offsets.h  params.c  pl011.c  plat_entry.S  psci.h  qemu.mk  rules.mk  smc.S  smc.c  smc.h  smc_internal.S  std.c  timer.c
src/arch/aarch64/boot_flow/: BUILD.gn  linux.S
src/arch/aarch64/hftest/: BUILD.gn  console.c  cpu_entry.S  entry.S  exceptions.S  hf_call.S  hf_call.c  interrupts_gicv3.c  mm.c  power_mgmt.c  state.c
src/arch/aarch64/hypervisor/: BUILD.gn  cpu_entry.S  debug_el1.c  debug_el1.h  exceptions.S  handler.c  hypervisor_entry.S  offsets.c  offsets.h  psci_handler.c
src/arch/aarch64/inc/: arch_addr.h  arch_api.h  arch_barriers.h  arch_cpu.h  arch_mm.h  io.h  psci.h
src/arch/aarch64/inc/hf/arch/: addr.h  (+4 more)
src/arch/aarch64/pl011/: BUILD.gn  pl011.c
src/arch/aarch64/vm/: BUILD.gn  cpu_entry.S  hf_call.S  power_mgmt.c  shutdown.c  vm_entry.S
src/arch/fake/: BUILD.gn  console.c  cpu.c  mm.c  putchar.c  timer.c
src/arch/fake/hypervisor/: cpu.c
src/arch/mock/: BUILD.gn  putchar.c
src/boot_flow/: BUILD.gn  android.c  linux.c
src/mock/: BUILD.gn  mm.c
test/hftest/: BUILD.gn  common.c  hftest.c  hftest.py  hftest_common.c  hftest_mm.c  hftest_service.c  linux_main.c  mm.c  power_mgmt.c  service.c  standalone_main.c
test/hftest/inc/: hftest.h  hftest_common.h  hftest_impl.h
test/linux/: BUILD.gn  hftest_socket.c  linux.c  manifest.dts
test/vm/: BUILD.gn  exceptions.S  gicv3.c  hf_test.h  hftest.c  hftest.h  hftest.py  kmain.c  primary_only.c  primary_with_secondaries.c  vm_entry.S
test/vm/primary_only/: BUILD.gn  primary.c
test/vm/primary_with_secondary/: BUILD.gn  primary.c  secondary.c
test/vm/secondaries/: BUILD.gn  echo.c  relay_a.c  relay_b.c
test/vmapi/: BUILD.gn  interrupts.c  interrupts.h  primary_for_state_test.c  primary_only.c  primary_with_secondaries.c
test/vmapi/gicv3/: BUILD.gn  busy_secondary.c  gicv3.c  interrupts.c  manifest.dts  timer_secondary.c
test/vmapi/gicv3/inc/: gicv3.h
test/vmapi/gicv3/services/: BUILD.gn  busy.c  common.c  common.h  systemreg.c  timer.c
test/vmapi/inc/: constants.h
test/vmapi/primary_only/: BUILD.gn  faults.c  manifest.dts  primary_only.c
test/vmapi/primary_with_secondaries/: BUILD.gn  abort.c  boot.c  debug_el1.c  debug_el1.h  floating_point.c  interrupts.c  mailbox.c  manifest.dts  memory_sharing.c  no_services.c  run_race.c  smp.c  spci.c  util.c  with_services.c
test/vmapi/primary_with_secondaries/inc/: primary_with_secondary.h  util.h
test/vmapi/primary_with_secondaries/services/: BUILD.gn  abort.c  boot.c  check_state.c  debug_el1.c  echo.c  echo_with_notification.c  floating_point.c  interruptible.c  interruptible_echo.c  memory.c  receive_block.c  relay.c  smp.c  spci_check.c  wfi.c
test/vmapi/secondaries/: BUILD.gn  check_state.c  echo.c  interruptible.c  relay_b.c
(+390 files in other folders)
