import("//build/image/image.gni")

group("arch_images") {
  testonly = true

  deps = [
    ":hypervisor",
    "//test/vm/primary_only:primary_only_test($arch_toolchain)",
    "//test/vm/primary_with_secondary:primary_with_secondary_test($arch_toolchain)",
  ]
}

group("hypervisor") {
  deps = [
    ":hafnium($arch_toolchain)",
  ]
}

executable("test") {
  testonly = true
  sources = [
    "test.cpp",
  ]
}

# Only build the image for the arch
if (current_toolchain == arch_toolchain) {
  hypervisor("hafnium") {
    deps = [
      "//src",
      "//src/arch/${arch}",
    ]
  }
}
