import("//build/image/image.gni")

group("tests") {
  testonly = true

  deps = [
    ":unit_tests",
    ":vm_tests",
  ]
}

group("unit_tests") {
  testonly = true

  deps = [
    "//src:unit_tests($mock_toolchain)",
  ]
}

group("vm_tests") {
  testonly = true

  deps = [
    ":hypervisor",
    "//test/vm/primary_only:primary_only_test($arch_toolchain)",
    "//test/vm/primary_with_secondary:primary_with_secondary_test($arch_toolchain)",
  ]
}

group("hypervisor") {
  deps = [
    ":hafnium($arch_toolchain)",
  ]
}

# Only build the image for the arch
if (current_toolchain == arch_toolchain) {
  hypervisor("hafnium") {
    deps = [
      "//src",
      "//src/arch/${arch}",
    ]
  }
}
