[package]
name = "hfo2"
version = "0.1.0"
authors = ["Jeehoon Kang <jeehoon.kang@kaist.ac.kr>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[features]
default = []
test = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true

[dependencies]
bitflags = "1.0"
static_assertions = "0.3.2"
reduce = "0.1"
arrayvec = { version = "0.4", default-features = false }
