import("//build/image/image.gni")

source_set("hf_test_vm") {
  sources = [
    "hf_test.h",
  ]

  deps = [
    "//src:common",
    "//src:common_debug",
    "//src/arch/${arch}:entry",
    "//src/arch/${arch}/vm:hf_call",
    "//src/arch/${arch}/vm:shutdown",
    "//src/arch/${arch}/vm:vm_entry",
  ]
}
