# Copyright 2018 The Hafnium Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# The root of the build redirects to a project build file so each project can
# select the artifacts it needs to build.

# The root of the build.
group("root") {
  deps = [
    "//project/${project}:root",
  ]
}

# The root of the build for test artifacts.
group("test_root") {
  testonly = true

  deps = [
    "//project/${project}:test_root",
  ]
}

group("update_prebuilts") {
  deps = [
    "//third_party/linux",
  ]
}

group("default") {
  testonly = true
  deps = [
    ":root",
    ":test_root",
  ]
}
