import("//build/arch/aarch64.gni")
import("//build/image/generate_offsets.gni")

source_set("aarch64") {
  sources = [
    "entry.S",
    "exceptions.S",
    "handler.c",
    "mm.c",
    "offsets.c",
    "params.c",
  ]

  if (arch_aarch64_use_pl011) {
    sources += [
      "pl011.c",
    ]
  }

  deps = [
    ":offsets",
  ]
}

generate_offsets("offsets") {
  sources = [
    "offsets.c",
  ]
}
