# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("args.gni")

# Hypervisor specific code.
source_set("aarch64") {
  sources = [
    "cpu_entry.S",
    "exceptions.S",
    "hypervisor_entry.S",
    "plat_entry.S",
  ]

  sources += [
    "handler.c",
    "offsets.c",
  ]

  deps = [
    ":arch",
    ":entry",
    ":smc",
  ]
}

# Implementation of the arch interface for aarch64.
source_set("arch") {
  sources = [
    "barriers.c",
    "cpu.c",
    "mm.c",
  ]
}

# Entry code to prepare the loaded image to be run.
source_set("entry") {
  sources = [
    "entry.S",
  ]
}

# Make a call to the secure monitor.
source_set("smc") {
  sources = [
    "smc.S",
  ]
}

# aarch64 implementation of putchar for debugging.
source_set("putchar") {
  if (arch_aarch64_use_pl011) {
    sources = [
      "pl011.c",
    ]

    deps = [
      ":arch",
    ]
  }
}
