import("//build/image/image.gni")

vm_kernel("primary_with_secondary_test_primary_vm") {
  testonly = true

  sources = [
    "primary.c",
  ]

  deps = [
    "//test/vm:hftest_vm",
  ]
}

vm_kernel("primary_with_secondary_test_secondary_vm") {
  testonly = true

  sources = [
    "secondary.c",
  ]

  deps = [
    "//test/vm:other_vm",
  ]
}

initrd("primary_with_secondary_test") {
  testonly = true
  primary_vm = ":primary_with_secondary_test_primary_vm"
  secondary_vms = [ [
        "1048576",
        "1",
        "secondary",
        ":primary_with_secondary_test_secondary_vm",
      ] ]
}
