import("//build/image/image.gni")

vm_kernel("echo") {
  testonly = true

  sources = [
    "echo.c",
  ]

  deps = [
    "//test/vm:secondary_vm",
  ]
}

vm_kernel("relay_a") {
  testonly = true

  sources = [
    "relay_a.c",
  ]

  deps = [
    "//test/vm:secondary_vm",
  ]
}

vm_kernel("relay_b") {
  testonly = true

  sources = [
    "relay_b.c",
  ]

  deps = [
    "//test/vm:secondary_vm",
  ]
}
