# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/image/image.gni")
import("//build/toolchain/platform.gni")

config("config") {
  include_dirs = [ "inc" ]
}

# Tests specific to GICv3.
vm_kernel("gicv3_test_vm") {
  testonly = true
  public_configs = [ ":config" ]

  sources = [
    "gicv3.c",
    "timer_secondary.c",
  ]

  deps = [
    "//src/arch/${plat_arch}/hftest:interrupts_gicv3",
    "//test/hftest:hftest_primary_vm",
  ]
}

initrd("gicv3_test") {
  testonly = true

  primary_vm = ":gicv3_test_vm"
  secondary_vms = [ [
        "1048576",
        "1",
        "services0",
        "//test/vmapi/gicv3/services:gicv3_service_vm0",
      ] ]
}
