# Copyright 2018 The Hafnium Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/image/image.gni")

config("config") {
  include_dirs = [ "inc" ]
}

# Tests with secondary VMs.
vm_kernel("primary_with_secondaries_test_vm") {
  testonly = true
  public_configs = [ ":config" ]

  sources = [
    "abort.c",
    "interrupts.c",
    "mailbox.c",
    "memory_sharing.c",
    "no_services.c",
    "run_race.c",
    "spci.c",
  ]

  sources += [ "util.c" ]

  deps = [
    "//test/hftest:hftest_primary_vm",
  ]
}

initrd("primary_with_secondaries_test") {
  testonly = true

  primary_vm = ":primary_with_secondaries_test_vm"
  secondary_vms = [
    [
      "1048576",
      "1",
      "services0",
      "services:service_vm0",
    ],
    [
      "1048576",
      "1",
      "services1",
      "services:service_vm1",
    ],
  ]
}
