# Copyright 2019 The Hafnium Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("args.gni")

# aarch64 PL011 implementation of putchar for debugging.
source_set("pl011") {
  sources = [
    "pl011.c",
  ]
  deps = [
    "//src/arch/aarch64:arch",
  ]

  assert(defined(pl011_base_address),
         "\"pl011_base_address\" must be defined for ${target_name}.")
  defines = [ "PL011_BASE=${pl011_base_address}" ]
}
