# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# These components are only used by VMs for aarch64 specific actions.

# Implements image_entry for a simple VM kernel.
source_set("vm_entry") {
  sources = [
    "vm_entry.S",
  ]
}

# Make a call to the hypervisor from a VM.
source_set("hf_call") {
  sources = [
    "hf_call.S",
  ]
}

# Shutdown the system or exit emulation, start/stop CPUs.
source_set("power_mgmt") {
  sources = [
    "cpu_entry.S",
    "power_mgmt.c",
  ]

  deps = [
    ":hf_call",
  ]
}
