# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/image/image.gni")

# Service which loops forever.
source_set("busy") {
  testonly = true
  public_configs = [ "//test/hftest:hftest_config" ]

  sources = [
    "busy.c",
    "common.c",
  ]

  deps = [
    "//src/arch/aarch64/hftest:interrupts_gicv3",
  ]
}

# Group services together into VMs.

vm_kernel("gicv3_service_vm0") {
  testonly = true

  deps = [
    ":busy",
    "//test/hftest:hftest_secondary_vm",
  ]
}
